--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Redux [RU]Tutorial</title>
   </head>
   <body>
-    <div id="root" class="container-fluid">
+    <div id="root" class="container">
     </div>
     <script src="/static/bundle.js"></script>
   </body>
